--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,9 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    position: sticky;
+    top: 0;
+    width: 1500px;
 }
 
 #header button {
