--- a/src/views/PostDetails/PostDetails.css
+++ b/src/views/PostDetails/PostDetails.css
@@ -12,3 +12,11 @@
 .comment p {
   margin: 4px 0;
 }
+
+.comments-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 12px;
+  width: 600px;
+}
