--- a/src/components/PostRow/PostRow.css
+++ b/src/components/PostRow/PostRow.css
@@ -5,6 +5,8 @@
     padding: 16px;
     border-radius: 8px;
     gap: 10px;
+    margin-bottom: 16px;
+    text-align: center;
 
     & h3 {
         width: 100%;
