--- a/src/views/AllPosts/AllPosts.css
+++ b/src/views/AllPosts/AllPosts.css
@@ -1,11 +1,11 @@
-.post-list{
+/* .post-list{
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
     justify-content: flex-start;
     padding: 16px;
     white-space: pre-wrap;
-}
+} */
 
 #all-posts-heading {
   text-align: center;
@@ -17,4 +17,20 @@
   margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.post-list {
+  padding: 16px;
+  white-space: pre-wrap;
+}
+
+.card-view {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: flex-start;
+}
+
+.row-view {
+  display: block;
 }
