--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,20 +3,63 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    position: sticky;
+    position: fixed;
     top: 0;
-    width: 1500px;
+    left: 0;
+    width: 100%;
+    border-bottom: 3px solid rgb(236, 236, 236);
 }
 
-#header button {
-    padding: 15px 25px;
+#header a {
+    padding: 10px 15px;
     border-radius: 15px;
     font-size: 1em;
     border: none;
     cursor: pointer;
     transition: all 0.5s;
+    background-color: rgb(236, 236, 236);
+    text-decoration: none;
+    color: black;
 }
 
-#header button:hover {
-    padding: 15px 45px;
+#header a:hover {
+    padding: 10px 25px;
+}
+
+#header .home {
+    padding: 0;
+    background-color: transparent;
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+    border: none;
+}
+
+#header .home:hover {
+    padding: 0;
+}
+
+#header .create-post {
+    display: flex;
+    height: 10px;
+    width: 10px;
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    border: 2px solid transparent;
+    font-size: 2em;
+    font-weight: lighter;
+    transition: all 0.5s;
+}
+
+#header .create-post:hover {
+    border: 2px solid red;
+    cursor: pointer;
+}
+
+.divider {
+    height: 70px;
+    align-self: center;
+    border-left: 3px solid rgb(236, 236, 236);
 }
