--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,6 +8,10 @@
     left: 0;
     width: 100%;
     border-bottom: 3px solid rgb(236, 236, 236);
+
+    background-image: url('/header-background.png');
+    background-size: cover;
+    /* background-repeat: repeat; */
 }
 
 #header a {
