--- a/src/views/PostDetails/PostDetails.css
+++ b/src/views/PostDetails/PostDetails.css
@@ -20,3 +20,18 @@
   margin-bottom: 12px;
   width: 600px;
 }
+
+.post-like-button{
+  background-color: rgb(69, 152, 253);
+  border-style: solid;
+  border: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+}
