--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,6 +8,7 @@
     left: 0;
     width: 100%;
     border-bottom: 3px solid rgb(236, 236, 236);
+    z-index: 9999;
 
     background-image: url('/header-background.png');
     background-size: cover;
