--- a/src/views/PostDetails/PostDetails.css
+++ b/src/views/PostDetails/PostDetails.css
@@ -1,5 +1,5 @@
-.comments-section{
-    width: 600px;
+.comments-section {
+  width: 600px;
 }
 
 .comment {
@@ -21,8 +21,23 @@
   width: 600px;
 }
 
-.post-like-button{
+.post-like-button {
   background-color: rgb(69, 152, 253);
+  border-style: solid;
+  border: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.post-delete-button {
+  background-color: rgb(233, 30, 12);
   border-style: solid;
   border: none;
   padding-left: 10px;
