--- a/src/views/AccountPage/AccountPage.css
+++ b/src/views/AccountPage/AccountPage.css
@@ -118,6 +118,7 @@
     width: 100%;
     background-color: rgb(225, 218, 218);
     border-radius: 15px;
+    margin: 20px 0 20px 0;
 }
 
 #acc-content-switcher .button-container {
@@ -166,7 +167,6 @@
     align-items: start;
     justify-content: space-between;
     width: 100%;
-    margin-top: 30px;
 }
 
 .acc-content-container {
