Implement universal search and UserRow component

--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,9 @@
   border: 1px solid rgba(255, 255, 255, 0.2);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
 }
+
+.content-loading * {
+    background-color: transparent !important;
+    color: transparent !important;
+    border-color: transparent !important;
+}
