--- a/src/components/AccountPicture/AccountPicture.css
+++ b/src/components/AccountPicture/AccountPicture.css
@@ -1,25 +1,26 @@
 #acc-pic-backdrop {
     display: flex;
-    align-items: center;
+    align-items: end;
     justify-content: center;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
     animation: fadeIn 0.5s ease forwards;
     opacity: 0;
-    z-index: 99999;
+    z-index: 999;
+    overflow: hidden;
 }
 
 .uploader-container {
     width: 500px;
     text-align: center;
     font-family: sans-serif;
-    background-color: #242424;
     padding: 30px;
     border-radius: 15px;
+    margin-bottom: 200px;
+    z-index: 9999;
 }
 
 .drop-area {
