--- a/src/views/AccountPage/AccountPage.css
+++ b/src/views/AccountPage/AccountPage.css
@@ -12,8 +12,14 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
     row-gap: 10px;
     column-gap: 20px;
+    border-radius: 15px;
+    outline: 2px solid transparent;
+    transition: all 0.3s ease;
+    width: 100%;
 }
 
 #main-acc-info button {
@@ -58,8 +64,15 @@
 
 .greeting {
     width: 100%;
-    font-size: 3em;
-    margin: 0;
+    display: flex;
+    gap: 10px;
+
+    & p {
+        font-size: 3em;
+        margin: 0;
+        width: fit-content;
+        align-self: center;
+    }
 }
 
 .acc-name {
@@ -76,7 +89,6 @@
     align-self: center;
     align-content: center;
     justify-items: center;
-    cursor: pointer;
     background-size: cover;
 
     & p {
@@ -86,8 +98,20 @@
     }
 }
 
-.acc-img-inactive {
-    cursor: default;
+.acc-img.editing,
+.acc-img-placeholder.editing {
+    cursor: pointer;
+    animation: imgPulse 1.5s ease infinite;
+}
+
+@keyframes imgPulse {
+    from {
+        outline: 3px solid transparent;
+    }
+
+    to {
+        outline: 3px solid white;
+    }
 }
 
 .acc-email {
@@ -187,4 +211,94 @@
     text-align: center;
     font-weight: bold;
     font-size: 2em;
+}
+
+#edit-mode-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    opacity: 0;
+    transition: all 0.3s ease;
+    pointer-events: none;
+    backdrop-filter: blur(0px);
+    -webkit-backdrop-filter: blur(0px);
+}
+
+#edit-mode-backdrop.editing {
+    background-color: rgb(0, 0, 0, 0.7);
+    z-index: 999;
+    opacity: 1;
+    pointer-events: auto;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+}
+
+#main-acc-info.editing {
+    z-index: 1000;
+    outline: 2px solid white;
+    box-shadow: 0 0 30px rgba(255, 255, 255, 0.4);
+    /* box-shadow: 0 0 30px rgba(255, 255, 255, 0.2); */
+    padding: 50px;
+    margin: 50px;
+}
+
+#email-change {
+    border: none;
+    outline: none;
+    margin: 10px 0 10px 10px;
+    padding: 10px 10px;
+    border-radius: 15px;
+}
+
+#acc-preferences-wrapper {
+    display: flex;
+    gap: 20px;
+
+    & p {
+        font-size: 3em;
+        margin: 0;
+    }
+}
+
+#acc-preferences-wrapper .acc-preferences {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+    outline: 2px solid transparent;
+    padding: 15px 20px;
+    border-radius: 15px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+
+    & p {
+        font-size: 2em;
+    }
+}
+
+#acc-preferences-wrapper .acc-preferences.active {
+    outline: 2px solid white;
+}
+
+#acc-preferences-wrapper .acc-preferences:hover {
+    outline: 2px solid white;
+}
+
+#main-acc-info .save-edits-button {
+    width: 100%;
+    border-radius: 15px;
+    margin: 0 auto;
+    margin-top: 40px;
+    padding: 10px 0;
+    font-size: 1.2em;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#main-acc-info .save-edits-button:hover {
+    width: 90%;
+    padding: 20px 0;
 }
