--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -13,7 +13,8 @@
     width: 16px;
     height: 16px;
     border-radius: 50%;
-    background: #ff3d00;
+    background: transparent;
+    border: 1px solid white;
     position: relative;
 }
 
