--- a/src/components/PostRow/PostRow.css
+++ b/src/components/PostRow/PostRow.css
@@ -1,21 +1,25 @@
 .post-row {
     display: flex;
-    flex-wrap: wrap;
-    border: 1px solid red;
-    padding: 16px;
-    border-radius: 8px;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
+    padding: 20px;
+    outline: 3px solid transparent;
+    border-radius: 15px;
     gap: 10px;
-    margin-bottom: 16px;
-    text-align: center;
+    transition: all 0.3s ease;
+    position: relative;
 
-    & h3 {
-        width: 100%;
+    & p {
         margin: 0;
     }
 
-    & p {
+    & h3 {
+        font-weight: bold;
+        font-size: 1.5em;
         width: 100%;
         margin: 0;
+        margin-bottom: 10px;
     }
 }
 
