--- a/src/views/AllPosts/AllPosts.css
+++ b/src/views/AllPosts/AllPosts.css
@@ -7,16 +7,37 @@
     white-space: pre-wrap;
 } */
 
+#all-posts-wrapper {
+    padding: 20px;
+    border-radius: 15px;
+}
+
+#all-posts-wrapper button {
+    padding: 10px;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    border-radius: 15px;
+}
+
 #all-posts-heading {
   text-align: center;
-  background-color: rgb(229, 12, 59);
-  border-radius: 50px;
   width: 250px;  
   padding: 6px;
-  margin-top: 50px;
-  margin-bottom: 20px;
+  margin-top: 100px;
+  margin-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
+}
+
+#all-posts-options {
+    display: flex;
+    justify-content: space-around;
+}
+
+#sort-select {
+    padding: 10px;
+    border-radius: 15px;
 }
 
 .post-list {
@@ -32,5 +53,7 @@
 }
 
 .row-view {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
