--- a/src/views/AuthGate/AuthGate.css
+++ b/src/views/AuthGate/AuthGate.css
@@ -4,7 +4,6 @@
     align-items: center;
     justify-content: center;
     width: 30%;
-    max-height: 20%;
     align-self: center;
     margin-top: 200px;
     gap: 10px;
@@ -13,31 +12,92 @@
 
 #auth-form {
     position: relative;
-    transition: all 1s;
+    z-index: 2;
 }
 
-#auth-form div {
-    position: absolute;
-    top: 0;
-    left: 0;
+#auth-switcher {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-self: center;
     width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: all 1s;
+    background-color: rgb(240, 240, 240);
+    border-radius: 15px;
+    margin-bottom: 20px;
 }
 
-.login-form {
-    clip-path: inset(0 100% 0 0);
-}
-
-.register-form {
-    clip-path: inset(0 0 0 100%);
-}
-
-#auth-form .auth-active {
+#auth-switcher .button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0;
+    width: 75%;
     position: relative;
-    clip-path: inset(0 0 0 0);
-    opacity: 1;
+}
+
+#auth-switcher .button-container button {
+    border: none;
+    outline: none;
+    padding: 10px;
+    background-color: transparent;
+    font-size: 1.5em;
+    width: 50%;
+    z-index: 1;
+    cursor: pointer;
+}
+
+#auth-switcher .button-container button.button-highlight {
+    color: transparent;
+    background-color: rgb(207, 207, 207);
+    border-radius: 15px;
+    transition: all 0.3s ease;
+    position: absolute;
+    z-index: 0;
+}
+
+.highlight-register {
+    left: 0%;
+}
+
+.highlight-login {
+    left: 50%;
+}
+
+#auth-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all 1s ease;
+    padding: 20px;
+    border-radius: 15px;
+    width: 100%;
+}
+
+#form-wrapper input {
+    width: 90%;
+    padding: 20px 10px;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    transition: all 0.3s ease;
+    font-size: 1em;
+}
+
+#form-wrapper input:focus {
+    width: 80%;
+} 
+
+.auth-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    margin: 0 0 10px 0;
+}
+
+#form-wrapper {
+    position: relative;
+    display: flex;
+    gap: 10px;
+    width: 100%;
 }
 
 .login-form, .register-form {
@@ -45,7 +105,58 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    border-radius: 15px;
     gap: 10px;
+    opacity: 0;
+    padding: 20px;
+    transition: all 0.3s ease;
+}
+
+.login-form {
+    position: absolute;
+    width: calc(100% - 40px);
+    height: auto;
+    top: 0;
+    bottom: 20px;
+    transform: translateX(100%);
+}
+
+.register-form {
+    transform: translateX(-100%);
+}
+
+#form-wrapper .auth-active {
+    transform: translateX(0%);
+    opacity: 1;
+}
+
+.auth-names {
+    display: flex;
+    gap: 10px;
+
+    & input {
+        width: 50%;
+    }
+}
+
+.auth-submit {
+    width: 90%;
+    align-self: center;
+    margin: 10px;
+    padding: 20px;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    transition: all 0.3s ease;
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
+.auth-submit:hover {
+    width: 80%;
 }
 
 #auth-error {
@@ -54,8 +165,28 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
-    position: absolute;
-    bottom: -50%;
-    left: 0;
     width: 100%;
+    animation: fadeInOut 6s ease forwards;
+    font-size: 1.5em;
+    padding: 0 20px;
+    border-radius: 15px;
+    opacity: 0;
+    transform: translateY(-100%);
+}
+
+@keyframes fadeInOut {
+    0% {
+        opacity: 0;
+    }
+    15% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+    85% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+    100% {
+        opacity: 0;
+    }
 }
