--- a/src/views/AuthGate/AuthGate.css
+++ b/src/views/AuthGate/AuthGate.css
@@ -112,6 +112,7 @@
     gap: 10px;
     opacity: 0;
     padding: 20px;
+    pointer-events: none;
     transition: all 0.3s ease;
 }
 
@@ -129,6 +130,7 @@
 }
 
 #form-wrapper .auth-active {
+    pointer-events: auto;
     transform: translateX(0%);
     opacity: 1;
 }
