--- a/src/components/PostRow/PostRow.css
+++ b/src/components/PostRow/PostRow.css
@@ -1,6 +1,7 @@
 .post-row {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     background-color: rgba(0, 0, 0, 0.3);
     color: white;
     padding: 20px;
@@ -9,6 +10,7 @@
     gap: 10px;
     transition: all 0.3s ease;
     position: relative;
+    cursor: pointer;
 
     & p {
         margin: 0;
@@ -19,11 +21,65 @@
         font-size: 1.5em;
         width: 100%;
         margin: 0;
-        margin-bottom: 10px;
     }
 }
 
-.post-row.clickable:hover {
-    opacity: 0.5;
+.post-row:hover {
+    opacity: 0.8;
+    outline: 3px solid rgb(225, 218, 218);
+}
+
+.post-row-author:hover {
+    color: white;
+    opacity: 1 !important;
+}
+
+.go-to-author {
+    color: white;
+    opacity: 0;
+    transition: all 0.3s ease;
+    font-style: italic;
+    font-size: 1em;
+    margin: 0;
+    margin-right: 10px;
+}
+
+.post-row-author:hover ~ .go-to-author {
+    opacity: 1 !important;
+}
+
+.post-row .post-row-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.post-row-details {
+    width: 100%;
+    display: flex;
+    gap: 10px;
+}
+
+.post-row-detail {
+    background-color: rgb(225, 218, 218);
+    color: black;
+    border-radius: 15px;
+    padding: 10px 15px;
+}
+
+.post-row .post-row-date {
+    text-align: right;
+    width: 100%;
+}
+
+.post-row .post-row-author {
     cursor: pointer;
-  }
+    text-decoration: underline;
+}
+
+.post-row .post-row-date, .post-row .post-row-author {
+    font-style: italic;
+    color: rgba(255, 255, 255, 0.7);
+    transition: all 0.3s ease;
+}
