--- a/src/views/AllPosts/AllPosts.css
+++ b/src/views/AllPosts/AllPosts.css
@@ -18,6 +18,8 @@
     outline: none;
     font-size: 1em;
     border-radius: 15px;
+    background-color: rgb(236, 236, 236);
+    cursor: pointer;
 }
 
 #all-posts-heading {
@@ -32,12 +34,52 @@
 
 #all-posts-options {
     display: flex;
-    justify-content: space-around;
+    justify-content: end;
+    align-items: center;
+    padding-right: 20px;
+    gap: 30px;
 }
 
-#sort-select {
-    padding: 10px;
+#view-switcher {
+    width: 10%;
+    background-color: rgb(236, 236, 236);
+    padding: 0 10px 0 10px;
     border-radius: 15px;
+}
+
+#view-switcher .button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0;
+    position: relative;
+}
+
+#view-switcher .button-container button {
+    border: none;
+    outline: none;
+    padding: 5px;
+    background-color: transparent;
+    font-size: 1.2em;
+    width: 50%;
+    z-index: 1;
+}
+
+#view-switcher .button-container button.button-highlight {
+    color: transparent;
+    background-color: rgb(212, 212, 212);
+    border-radius: 15px;
+    transition: all 0.3s ease;
+    position: absolute;
+    z-index: 0;
+}
+
+.highlight-row {
+    left: 0%;
+}
+
+.highlight-card {
+    left: 50%;
 }
 
 .post-list {
