--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,17 @@
 
     color: rgba(255, 255, 255, 0.87);
 
-    background-image: 
-        linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-        url('background.webp');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+    background-image: 
+        linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+        url('/background.webp');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
