--- a/src/views/HomePage/HomePage.css
+++ b/src/views/HomePage/HomePage.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: center;
     width: 100%;
     margin-top: 50px;
 }
@@ -26,24 +26,24 @@
 #forum-content {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.forum-content-title, .forum-content-container  {
-    width: 45%;
-    padding: 20px;
+    align-items: start;
+    gap: 40px;
 }
 
 .forum-content-title {
     font-size: 2em;
     font-weight: bold;
     text-align: center;
-    padding: 0 20px;
-    margin: 0 0 10px 0;
+    margin: 0;
+    margin-bottom: 10px;
+    width: 100%;
 }
 
 .forum-content-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     border-radius: 15px;
+    padding: 20px;
+    width: calc(50% - 20px);
 }
