--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,14 +4,16 @@
     align-items: center;
     justify-content: space-around;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    top: 20px;
+    left: 50%;
+    width: 90%;
+    transform: translateX(-50%);
     border-bottom: 3px solid rgb(236, 236, 236);
+    border-radius: 15px;
     z-index: 99;
 
-    background-image: url('/header-background.png');
-    background-size: cover;
+    /* background-image: url('/header-background.png');
+    background-size: cover; */
     /* background-repeat: repeat; */
 }
 
