--- a/src/components/PostCard/PostCard.css
+++ b/src/components/PostCard/PostCard.css
@@ -1,19 +1,103 @@
+.post-list.card-view {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 10px;
+}
+
 .post-card {
-  flex: 1 1 300px;
-  max-width: 400px;
-  border: 1px solid red;
-  padding: 16px;
-  margin: 8px;
-  border-radius: 8px;
-  transition: opacity 0.2s ease-in-out;
-
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  white-space: pre-wrap;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
+    padding: 20px;
+    outline: 3px solid transparent;
+    border-radius: 15px;
+    gap: 10px;
+    transition: all 0.3s ease;
+    position: relative;
+    cursor: pointer;
 }
 
-.post-card.clickable:hover {
-  opacity: 0.5;
-  cursor: pointer;
+.post-card:hover {
+    opacity: 0.8;
+    outline: 3px solid rgb(225, 218, 218);
 }
 
+.post-card-author:hover {
+    color: white;
+    opacity: 1 !important;
+}
+
+.go-to-author {
+    color: white;
+    opacity: 0;
+    transition: all 0.3s ease;
+    font-style: italic;
+    font-size: 1em;
+    margin: 0;
+    margin-right: 10px;
+}
+
+.post-card-author:hover ~ .go-to-author {
+    opacity: 1 !important;
+}
+
+.post-card .post-card-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+.post-card img {
+    width: 100%;
+    height: 100px;
+    object-fit: contain;
+    border-radius: 10px;
+    background: #222;
+    display: block;
+}
+
+.post-card-content {
+    white-space: pre-wrap;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    word-break: break-word;
+    overflow-wrap: anywhere;
+}
+
+.post-card .post-card-details {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    gap: 10px;
+}
+
+.post-card-detail {
+    background-color: rgb(225, 218, 218);
+    color: black;
+    border-radius: 15px;
+    padding: 10px 15px;
+    font-weight: initial;
+}
+
+.post-card .post-card-date {
+    text-align: right;
+    width: 100%;
+}
+
+.post-card .post-card-author {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.post-card .post-card-date, .post-card .post-card-author {
+    font-style: italic;
+    color: rgba(255, 255, 255, 0.7);
+    transition: all 0.3s ease;
+    margin: 0;
+}
